HVAC Backup 2/objects/BOM__c.object
<CustomObject>
    <fields>
        <fullName>AltBOM__c</fullName>
        <label>AltBOM</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BOM_Category__c</fullName>
        <label>BOM Category</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>A</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>BOM_Number__c</fullName>
        <externalId>true</externalId>
        <label>BOM Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Document_URL__c</fullName>
        <label>Document URL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>End_Date__c</fullName>
        <label>End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Parent_BOM__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Parent BOM</label>
        <referenceTo>BOM__c</referenceTo>
        <relationshipLabel>BOM Models</relationshipLabel>
        <relationshipName>BOM_Model</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Parent_Model__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>refers to the parent product</description>
        <label>Parent Model</label>
        <referenceTo>Product2</referenceTo>
        <relationshipLabel>BOMs (Parent Model)</relationshipLabel>
        <relationshipName>BOMs1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Product_Code__c</fullName>
        <label>Product Code</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product_Family__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Product Family</label>
        <referenceTo>Product_Family__c</referenceTo>
        <relationshipLabel>BOMs</relationshipLabel>
        <relationshipName>BOMs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Product_Sub_Family__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Product Sub Family</label>
        <referenceTo>Product_Family__c</referenceTo>
        <relationshipLabel>BOMs (Product Sub Family)</relationshipLabel>
        <relationshipName>BOMs1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Product__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Lookup to the product</description>
        <label>Product</label>
        <referenceTo>Product2</referenceTo>
        <relationshipLabel>BOMs</relationshipLabel>
        <relationshipName>BOMs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SortString__c</fullName>
        <label>SortString</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Start_Date__c</fullName>
        <label>Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Active</fullName>
                </value>
                <value>
                    <fullName>Inactive</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>BOM</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Product_Code__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>CREATED_DATE</columns>
        <columns>CREATEDBY_USER.ALIAS</columns>
        <columns>Document_URL__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>BOM Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>BOMs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>New_BOM_validation</fullName>
        <active>false</active>
        <errorConditionFormula>AND(
    ISNEW(),
    
    ISBLANK(BOM_Number__c),
    ISBLANK(Product_Code__c),
    ISBLANK(Product__c)
)</errorConditionFormula>
        <errorMessage>Please Fill Mandatory Details like BOM Number ,Product Code and Product</errorMessage>
    </validationRules>
</CustomObject>